syntax = "proto3";
package matrix.v1;
option go_package = "github.com/robbydyer/sports/internal/proto/sportsmatrix";
import "google/protobuf/empty.proto";

service Sportsmatrix {
       rpc Version(google.protobuf.Empty) returns (VersionResp);
       rpc ScreenOn(google.protobuf.Empty) returns (google.protobuf.Empty);
       rpc ScreenOff(google.protobuf.Empty) returns (google.protobuf.Empty);
       rpc Status(google.protobuf.Empty) returns (ScreenStatusResp);
       rpc SetAll(SetAllReq) returns (google.protobuf.Empty);
       rpc Jump(JumpReq) returns (google.protobuf.Empty);
       rpc NextBoard(google.protobuf.Empty) returns (google.protobuf.Empty);
       rpc RestartService(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message VersionResp {
    string version = 1;
}

message ScreenStatusResp {
    bool screen_on = 1;
    bool webboard_on = 2;
}

message SetAllReq {
    bool enabled = 1;
}

message JumpReq {
    string board = 1;
}